# github-action-test-sebas

./: 404.html  Dockerfile  Makefile  Pipfile  index.html  pyproject.toml
.github/workflows/: learn-github-actions.yml  main.yml  test-building.yml
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/site/: index.html
search/: search_index.json
